--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <head>
-  <title>Page title</title>
+  <title>Welcome to the Dental Learning Resource Center</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 
-<h1>Kue's Webpage</h1>
+<div id="about"
+<h1>About</h1>
+
+<br <p>
 
 <div id="contact">
 <h2>Contact info</h2>
