--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <div id="about"
 <h1>About</h1>
 
-<br <p>
+<br <p>The Dental Learning Resource Center (DLRC) is a computer lab for dental students, staff, and faculty within the dental program. </p>
 
 <div id="contact">
 <h2>Contact info</h2>
 <ul>
   <li><strong>Phone:</strong> 555-867-5309</li>
   <li><strong>E-mail:</strong> example@example.org</li>
-  <li><strong>Website:</strong> http://www.example.org</li>
+  <li><strong>Location:</strong> Moos Tower, 8th floor, RM 826</li>
 </ul>
 </div>
 
