--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!doctype html>
 <head>
-  <title>Welcome to the Dental Learning Resource Center</title>
+  <title>Dental Learning Resource Center</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 
-<div id="about"
-<h1>About</h1>
+<div id="about">
+<h1><strong>About</strong></h1>
 
 <br <p>The Dental Learning Resource Center (DLRC) is a computer lab for dental students, staff, and faculty within the dental program. </p>
-
+</div>
 <div id="contact">
-<h2>Contact info</h2>
+
+<h2>Basic Info</h2>
 <ul>
+  <li><strong>Location:</strong> Moos Tower, 8th floor, RM 826</li>
+  <li><strong>Hours:</strong> Monday-Friday, 7:30AM-8:00PM</li>
   <li><strong>Phone:</strong> 555-867-5309</li>
   <li><strong>E-mail:</strong> example@example.org</li>
-  <li><strong>Location:</strong> Moos Tower, 8th floor, RM 826</li>
+
 </ul>
+
+
+<h2>Services Available</h2>
+<ul>
+  <li>Free printing</li>
+  <li>Scanner</li>
+  <li>University phone</li>
+  <li>Equipment rental</li>
+  <li>Study space</li>
+</ul>
+
 </div>
-
-<h2>Welcome!</h2>
-
-<p>Hello! My name is Kue Thao and I am a Senior at the University of Minnesota, studying Technical Writing and Communication, with an emphasis on Information Technology and Design.</p>
-
-<p>I am currently enrolled in WRIT 4662w and will be creating a website for my client, the DLRC.</p>
-
-<h2>Education</h2>
-
-<p>Univeristy of Minnesota Twin Cities. Majoring in Technical Writing and Communication. </p>
-
-
-<h2>Interest</h2>
-
-<p>Poetry and various other arts.</p>
 
 </body>
 </html>
