--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <br <p>The Dental Learning Resource Center (DLRC) is a computer lab for dental students, staff, and faculty within the dental program. </p>
 </div>
+
 <div id="contact">
 
 <h2>Basic Info</h2>
 <ul>
-  <li><strong>Location:</strong> Moos Tower, 8th floor, RM 826</li>
-  <li><strong>Hours:</strong> Monday-Friday, 7:30AM-8:00PM</li>
+  <li><strong>Location:</strong> Moos Tower, 8th floor, RM 8-425</li>
+  <li><strong>Hours:</strong> Monday-Friday, 7:30AM-7:30PM</li>
   <li><strong>Phone:</strong> 555-867-5309</li>
   <li><strong>E-mail:</strong> example@example.org</li>
 
@@ -33,6 +34,7 @@
 </ul>
 
 </div>
-
+<div id="images">
+  <img src="Images/Entrance 1.jpg" class="large" alt="Entrance" />
 </body>
 </html>
