--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="about">
 <h1><strong>About</strong></h1>
 
-<br <p>The Dental Learning Resource Center (DLRC) is a computer lab for dental students, staff, and faculty within the dental program. </p>
+<br <p>Established in 1974, the Dental Learning Resource Center (DLRC) is a computer lab for dental students, staff, and faculty within the dental program. </p>
 </div>
 
 <div id="contact">
@@ -35,6 +35,6 @@
 
 </div>
 <div id="images">
-  <img src="Images/Entrance 1.jpg" class="large" alt="Entrance" />
+  <img src="Images/Entrance 1.jpg"/>
 </body>
 </html>
